# BurhanApp

./: .gitignore  BurhanApp.spec  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  run_qt.py
.github/workflows/: build.yml
assets/: BurhanApp.icns
src/scanmaker/: __init__.py  __main__.py  app.py  canvas.py  models.py  qt_app.py  qt_canvas.py  rendering.py  theme.py  updater.py  utils.py
